fix: add display none to collapse elements
this prevents keyboard navigation tabbing through any links in the collapsed element

--- a/site/assets/src/scss/styles.scss
+++ b/site/assets/src/scss/styles.scss
@@ -734,6 +734,7 @@ input::-webkit-calendar-picker-indicator {
   height: 0;
   transition: height 0.2s ease-out;
   overflow: hidden;
+  display: none;
 }
 .zume-collapse[data-state="open"] {
   overflow: initial;
